# registration

./: CMakeLists.txt  README.md  example_cls.hpp  example_tpl.hpp  main.cpp  register.hpp  registration.kdev4  singleton.hpp  test.cpp
registration/: .registration.hpp.kate-swp  CMakeLists.txt  CMakeLists.txt~  registration.hpp~
registration/details/: access.hpp  config.hpp  errors.hpp  keys.hpp  reg_cls.hpp  reg_tmpl.hpp  register.hpp  singleton.hpp  tag.hpp  traits.hpp  utils.hpp
